# snakemake-interface-executor-plugins

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  tests.py
.github/workflows/: release-please.yml  test-poetry.yml  test.yml
snakemake_executor_plugin_interface/: __init__.py  _common.py  dag.py  exceptions.py  jobs.py  logging.py  persistence.py  scheduler.py  utils.py  workflow.py
snakemake_executor_plugin_interface/executors/: __init__.py  abstract.py  cluster_cloud.py  real.py  remote.py
snakemake_executor_plugin_interface/registry/: __init__.py  plugin.py
snakemake_interface_executor_plugins/: __init__.py  _common.py  cli.py  dag.py  exceptions.py  jobs.py  logging.py  persistence.py  resources.py  scheduler.py  settings.py  utils.py  workflow.py
snakemake_interface_executor_plugins/executors/: base.py  real.py  remote.py
snakemake_interface_executor_plugins/registry/: __init__.py  attribute_types.py  plugin.py
tests/: __init__.py  test_py37.py  tests.py
