[tool.poetry]
authors = ["Johannes Köster <johannes.koester@uni-due.de>"]
description = "This package provides a stable interface for interactions between Snakemake and its executor plugins."
license = "MIT"
name = "snakemake-interface-executor-plugins"
packages = [{include = "snakemake_interface_executor_plugins"}]
readme = "README.md"
version = "9.3.1"

[tool.poetry.dependencies]
argparse-dataclass = "^2.0.0"
python = "^3.11"
throttler = "^1.2.2"
snakemake-interface-common = "^1.17.4"

[tool.poetry.dev-dependencies]
black = "^24.0.0"
coverage = {extras = ["toml"], version = "^6.3.1"}
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
pytest = "^7.0"
snakemake = {git="https://github.com/snakemake/snakemake.git"}
snakemake-executor-plugin-cluster-generic = {git = "https://github.com/snakemake/snakemake-executor-plugin-cluster-generic.git"}

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 63

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
